overflow fixed again

--- a/Style/style.css
+++ b/Style/style.css
@@ -228,7 +228,7 @@ body {
   content: "";
   position: absolute;
   left: 0;
-  width: 200%;
+  width: 100%;
   overflow-x: hidden;
   height: 100px;
   background-size: 50px 50px;
@@ -454,7 +454,7 @@ body {
   content: "";
   position: absolute;
   left: 0;
-  width: 200%;
+  width: 100%;
   height: 100px;
   overflow-x: hidden;
   background-size: 50px 50px;
